syntax = "proto3";

package api.panshee.v1.proto;

option java_package = "api.panshee.v1.proto";
option java_multiple_files = true;
option java_outer_classname = "EmailProto";

option go_package = ".;pb";

// A representation of a Email
message Email {
    // Email of the receiver
    string to = 1;
    // Subject of the email
    string subject = 2;
    // Message of the email
    string message = 3;
}

// A representation of a Send Email Request
message SendEmailRequest {
    //Email to send to the user
    Email email = 1;
}

// A representation of a Send Email Reponse
message SendEmailResponse {
    //Email sent
    Email email = 1;
}
